2008-02-15  Per Bothner  <per@bothner.com>

	* kawa-tour.texi, kawa-tour.tex: Remove old document.
	This has been replaced by the "internals" manual.
	* Makefile.am: Update accordingly.

2008-01-26  Per Bothner  <per@bothner.com>

	* kawa.texi: Note the binary jar now requires Java 5.

	* kawa.texi (Syntax and conditional compilation): Document somewhat
	define-syntax-case and deprecated define-macro.

2008-01-22  Per Bothner  <per@bothner.com>

	* kawa.texi: Add note on simulating synchronized methods.

2008-01-06  Per Bothner  <per@bothner.com>

	* kawa.texi: Various updates and fixes.
	(Type tests and conversions): New node.
	(Miscellaneous): Move 'as' and 'instance?' to new node.

2007-06-03  Per Bothner  <per@bothner.com>

	* kawa.texi (Syntax and conditional compilation): Document include
	and include-relative.
	(Eval and Environments): Dis-recommend load and load-relative.

2007-04-19  Per Bothner  <per@bothner.com>

	* kawa.texi (Defining new classes): Document abstract methods,
	and the interface: and access: class-level specifiers.
	Divide into sub-sub-sections.

2007-03-19  Per Bothner  <per@bothner.com>

	* kawa.texi: Re-order some sections.

2007-01-28  Per Bothner  <per@bothner.com>

	* kawa.texi (Getting Kawa): Remove reference to kawa-VERSION-src.zip.
	Add suggestion to use 7-zip to unpack on Windows.

2007-01-20  Per Bothner  <per@bothner.com>

	* kawa.texi: Remove subsection on using Jikes.
	Some updates on using gcj, mentioning --with-gcj-dbtool.

	* kawa.texi (Symbols and namespaces): New section.
	(Special named constants, Keywords): Move under new section.
	(Namespaces): New node.
	(XML tools): Add introduction.
	(Formatting XML, Creating HTML nodes, Creating XML nodes): New nodes.

2007-01-14  Per Bothner  <per@bothner.com>

	* kawa.texi (Applet compilation): Tweak example to use two archives.
	Note problem with large Kawa.jar and discuss some solutions.

2007-01-11  Per Bothner  <per@bothner.com>
